application/4.ingress/ingingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress-nginx
  labels:
    project: snackbar
spec:
  ingressClassName: nginx
  rules:
    # - host: -> domain이 없는 경우 생략가능
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontservice
                port:
                  number: 80
          - path: /auth-module
            pathType: Prefix
            backend:
              service:
                name: authmodule
                port:
                  number: 8080
